k8s/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
labels:
   app: spring-music
spec:
  selector:
    app: spring-music
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: spring-music
    type: LoadBalancer
