k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /moose
        pathType: Prefix
        backend:
          service:
            name: moose-svc
            port:
              number: 80

   paths:
      - path: /bear
        pathType: Prefix
        backend:
          service:
            name: bear-svc
            port:
              number: 80
